--- a/test/src/main/webapp/WEB-INF/css/css.css
+++ b/test/src/main/webapp/WEB-INF/css/css.css
@@ -1,4 +1,44 @@
 @CHARSET "UTF-8";
+
 body {
 	background: url("../images/bg.jpg")
+}
+
+div {
+	border: 1px dotted green;
+	margin: 5px;
+}
+
+.nav {
+	float: right;
+	top: 10px;
+	right: 10px;
+}
+
+.divform {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	width: 400px;
+	height: 300px;
+	padding: 5px;
+	margin-top: -150px;
+	margin-left: -200px;
+}
+
+.center {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+}
+
+.btn {
+	background-color: #60B044;
+	position: absolute;
+	top: 85%;
+	left: 50%;
+	width: 84px;
+	height: 30px;
+	margin-left: -42px;
+	margin-top: -15px;
 }
