--- a/test/src/main/webapp/WEB-INF/css/css.css
+++ b/test/src/main/webapp/WEB-INF/css/css.css
@@ -1,44 +1,105 @@
 @CHARSET "UTF-8";
 
-body {
-	background: url("../images/bg.jpg")
+body,input,select,textarea,button {
+	color: #333333;
+	font: 13px/1.4 Helvetica, arial, freesans, clean, sans-serif;
 }
 
-div {
-	border: 1px dotted green;
-	margin: 5px;
+a {
+	text-decoration: none;
 }
 
-.nav {
+h1 {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 16px;
+	color: white;
+}
+
+label {
+	font-weight: bold;
+}
+
+input[type="text"] {
+	width: 100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
+
+.head {
+	padding: 15px 0;
+}
+
+.head-action {
 	float: right;
-	top: 10px;
-	right: 10px;
 }
 
-.divform {
-	position: absolute;
-	top: 40%;
-	left: 50%;
+.auth-form {
+	margin: 60px auto;
 	width: 400px;
-	height: 300px;
-	padding: 5px;
-	margin-top: -150px;
-	margin-left: -200px;
 }
 
-.center {
-	position: absolute;
-	top: 40%;
-	left: 50%;
+.auth-form form {
+	border-radius: 4px;
 }
 
-.btn {
-	background-color: #60B044;
-	position: absolute;
-	top: 85%;
-	left: 50%;
-	width: 84px;
-	height: 30px;
-	margin-left: -42px;
-	margin-top: -15px;
+.auth-form-head {
+	background-color: #6C8393;
+	padding: 10px 20px;
+	border-width: 1px;
+	position: relative;
+	border-style: solid;
+	border-color: #6E8290 #6E8290 #586873;
+	border-radius: 4px 4px 0 0;
+}
+
+.auth-form-head h1 {
+	font-size: 16px;
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+.auth-form-body {
+	box-sizing: border-box;
+	border: 1px solid #D8DEE2;
+	padding: 20px;
+	border-radius: 0 0 3px 3px;
+}
+
+.input-block {
+	display: block;
+	width: 100%;
+}
+
+.auth-form-body .input-block {
+	padding: 7px 8px;
+	margin-top: 5px;
+	margin-bottom: 15px;
+	border: 1px solid #CCCCCC;
+}
+
+.button {
+	cursor: pointer; background-color : #EEEEEE;
+	border: 1px solid #D5D5D5;
+	border-radius: 3px;
+	color: #333333;
+	font-size: 13px;
+	font-weight: bold;
+	padding: 7px 12px;
+	background-color: #EEEEEE;
+}
+
+label,input[type="text"],input[type="password"] {
+	font-size: 13px;
+	font-weight: 700;
+	border-radius: 3px;
+}
+
+.primary {
+	background-image: linear-gradient(#8ADD6D, #60B044);
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	border-radius: 3px;
+	text-decoration: none;
+	color: white;
+	margin-left: 5px;
 }
